--- a/templates/base.html
+++ b/templates/base.html
@@ -4,9 +4,8 @@
 {% block styles %}
     <!-- Bootstrap -->
     <link href="{{ bootstrap_find_resource('css/bootstrap.css', cdn='bootstrap') }}" rel="stylesheet">
-    <link href="/static/style.css" rel="stylesheet" type="text/css"/>
-{% endblock %}
-
+    <link rel="stylesheet" href="/static/style.css" type="text/css">
+{% endblock %}w
 {% block navbar %}
     <div class="navbar navbar-inverse" role="navigation">
         <div class="container">
