--- a/templates/girls.html
+++ b/templates/girls.html
@@ -4,10 +4,9 @@
     <div id="girl">
         <h1>妹子们 :)</h1>
         <p><a href="/girls">点我换内容哟 ～</a></p>
+
         {% for data in datas %}
-            <p>
-                <img src="{{ data.url }} ">
-            </p>
+            <p><img src="{{ data.url }} "></p>
         {% endfor %}
     </div>
 {% endblock %}
