--- a/templates/index.html
+++ b/templates/index.html
@@ -18,7 +18,9 @@
             <ul>
                 <div class="todo">
                     <li><a href="/gif">娱乐 GIF</a></li>
+                    <li><a href="/save_email">ONE 邮件系统</a></li>
                 </div>
+
             </ul>
         </div>
     </div>
