--- a/templates/one.html
+++ b/templates/one.html
@@ -1,5 +1,5 @@
 {% extends "base.html" %}
-{% block title %}每个一个 ONE {% endblock %}
+{% block title %}每天 一个 ONE {% endblock %}
 {% block content %}
     <div class="container">
         <div style="text-align: center">
