--- a/templates/girls.html
+++ b/templates/girls.html
@@ -2,10 +2,12 @@
 {% block title %}妹子们{% endblock %}
 {% block content %}
     <div id="girl">
-        <h1>妹子们 :)</h1>
-        <h2><p><a href="/girls">点我换内容哟 ～</a></p></h2>
+        <h1 style="margin-bottom: 48px">妹子们 :)</h1>
+
         {% for data in datas %}
             <p><img class="img-responsive" alt="140x140" src="{{ data.url }} "></p>
         {% endfor %}
+
+        <h2 style="margin-top: 24px"><p><a href="/girls">点我换内容哟 ～</a></p></h2>
     </div>
 {% endblock %}
