--- a/templates/girls.html
+++ b/templates/girls.html
@@ -5,7 +5,8 @@
         <h1 style="margin-bottom: 48px">妹子们 :)</h1>
 
         {% for data in datas %}
-            <p><img class="img-responsive" alt="140x140" src="{{ data.url }} "></p>
+            <p><img style="box-shadow:rgb(102, 102, 102) 0.2em 0.2em 0.5em" class="img-responsive" alt="140x140"
+                    src="{{ data.url }} "></p>
         {% endfor %}
 
         <h2 style="margin-top: 24px"><p><a href="/girls">点我换内容哟 ～</a></p></h2>
